@@ -519,6 +519,61 @@ MPI_Intercomm_merge( MPI_Comm intercomm, int high, MPI_Comm* newcomm )
 }
 #endif
 
+#if HAVE( DECL_PMPI_COMM_IDUP )
+/**
+ * Measurement wrapper for MPI_Comm_idup
+ * @note C interface
+ * @note Introduced with MPI-3
+ * @ingroup cg
+ * Triggers a program abort as this routine is not supported by Score-P.
+ */
+int
+MPI_Comm_idup( MPI_Comm comm, MPI_Comm* newcomm, MPI_Request* request )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
+    const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_CG );
+    int       return_val;
+
+    if ( event_gen_active )
+    {
+        SCOREP_MPI_EVENT_GEN_OFF();
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_EnterWrappedRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_EnterWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+    }
+
+    SCOREP_ENTER_WRAPPED_REGION();
+    return_val = PMPI_Comm_idup( comm, newcomm, request );
+    SCOREP_EXIT_WRAPPED_REGION();
+    if ( return_val == MPI_SUCCESS )
+    {
+        scorep_mpi_request_comm_idup_create( *request, comm, newcomm );
+    }
+
+    if ( event_gen_active )
+    {
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_ExitRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_ExitWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+        SCOREP_MPI_EVENT_GEN_ON();
+    }
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+    return return_val;
+}
+#endif
+
 /**
  * @}
  * @name C wrappers for communicator destructors
@@ -2481,24 +2536,6 @@ MPI_Keyval_free( int* keyval )
  * @{
  */
 
-
-#if HAVE( DECL_PMPI_COMM_IDUP )
-/**
- * Measurement wrapper for MPI_Comm_idup
- * @note Auto-generated by wrapgen from template: SCOREP_Mpi_NotSupported.w
- * @note C interface
- * @note Introduced with MPI-3
- * @ingroup cg
- * Triggers a program abort as this routine is not supported by Score-P.
- */
-int
-MPI_Comm_idup( MPI_Comm comm, MPI_Comm* newcomm, MPI_Request* request )
-{
-    SCOREP_IN_MEASUREMENT_INCREMENT();
-    UTILS_FATAL( "The operation %s is currently not supported by Score-P!", __func__ );
-    SCOREP_IN_MEASUREMENT_DECREMENT();
-}
-#endif
 
 /**
  * @}
