@@ -22,6 +22,61 @@
 
 #pragma wrapgen multiple regex((Interc|C)omm_(create|create_group|dup|dup_with_info|merge|split|split_type)$) skel/SCOREP_Mpi_CommMgnt.w
 
+#if HAVE( DECL_PMPI_COMM_IDUP )
+/**
+ * Measurement wrapper for MPI_Comm_idup
+ * @note C interface
+ * @note Introduced with MPI-3
+ * @ingroup cg
+ * Triggers a program abort as this routine is not supported by Score-P.
+ */
+int
+MPI_Comm_idup( MPI_Comm comm, MPI_Comm* newcomm, MPI_Request* request )
+{
+    SCOREP_IN_MEASUREMENT_INCREMENT();
+    const int event_gen_active           = SCOREP_MPI_IS_EVENT_GEN_ON;
+    const int event_gen_active_for_group = SCOREP_MPI_IS_EVENT_GEN_ON_FOR( SCOREP_MPI_ENABLED_CG );
+    int       return_val;
+
+    if ( event_gen_active )
+    {
+        SCOREP_MPI_EVENT_GEN_OFF();
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_EnterWrappedRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_EnterWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+    }
+
+    SCOREP_ENTER_WRAPPED_REGION();
+    return_val = PMPI_Comm_idup( comm, newcomm, request );
+    SCOREP_EXIT_WRAPPED_REGION();
+    if ( return_val == MPI_SUCCESS )
+    {
+        scorep_mpi_request_comm_idup_create( *request, comm, newcomm );
+    }
+
+    if ( event_gen_active )
+    {
+        if ( event_gen_active_for_group )
+        {
+            SCOREP_ExitRegion( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+        else if ( SCOREP_IsUnwindingEnabled() )
+        {
+            SCOREP_ExitWrapper( scorep_mpi_regions[ SCOREP_MPI_REGION__MPI_COMM_IDUP ] );
+        }
+        SCOREP_MPI_EVENT_GEN_ON();
+    }
+
+    SCOREP_IN_MEASUREMENT_DECREMENT();
+    return return_val;
+}
+#endif
+
 /**
  * @}
  * @name C wrappers for communicator destructors
@@ -236,8 +291,6 @@ MPI_Comm_set_name( MPI_Comm comm, SCOREP_MPI_CONST_DECL char* comm_name )
  */
 
 #pragma wrapgen multiple restrict(gcg_misc+!n_c2f+!n_f2c) skel/SCOREP_Mpi_Std.w
-
-#pragma wrapgen single MPI_Comm_idup skel/SCOREP_Mpi_NotSupported.w
 
 /**
  * @}
